# CppVariant

./: CMakeLists.txt  README.md  program.cpp  program.h
BitConverter/: BitConverter.cpp  BitConverter.h
Util/: data.cpp  data.h  globais.cpp  globais.h  stringify.h
Variant/: Variant.cpp  Variant.h
